<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <!-- <Button
        android:id="@+id/buttonSwitchCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="切换摄像头" /> -->

    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capture" />
    <Button
        android:id="@+id/buttonReturnToLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_resume_live" />
    <Button
        android:id="@+id/buttonBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu" />
        
    </LinearLayout>

    <!-- 保留GPU/CPU选择器，移除模型选择器 -->
    <!-- 已移除 CPU/GPU 选择器，统一使用 CPU 推理 -->

    <SurfaceView
        android:id="@+id/cameraview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
