<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="#f5f5f5">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:src="@mipmap/ic_launcher" />

    <ImageView
        android:layout_width="351dp"
        android:layout_height="108dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/waston" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mobile Object Detection App (NCNN)"
        android:layout_marginBottom="32dp"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/buttonRealTime"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:background="#4CAF50"
        android:elevation="4dp"
        android:text="@string/btn_realtime"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonImageUpload"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="#2196F3"
        android:elevation="4dp"
        android:text="@string/btn_image_upload"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/hint_mode_select"
        android:textColor="#000000"
        android:textSize="14sp" />
    <!--        android:textColor='#888888'-->
</LinearLayout>
